--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,8 @@
     transform: rotate(360deg);
   }
 }
+
+.ColorTest{
+  background-image: url(./components/assets/bg3.png);
+  min-height: 100vh;
+}
