--- a/src/App.css
+++ b/src/App.css
@@ -3,15 +3,14 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  position: relative;
+  right: 100px;
+  bottom: 50px;
+  height: 60vmin;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+
 
 .App-header {
   background-color: #258112;
@@ -35,9 +34,4 @@
   to {
     transform: rotate(360deg);
   }
-}
-
-.ColorTest{
-  background-image: url(./components/assets/bg3.png);
-  min-height: 100vh;
 }
