--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -13,15 +13,15 @@
     min-height: 91.5vh;
 }
 .home-logo{
-    left: px;
-    border: 0px;
+    left: 10px;
 
 }
 .home-logo img{
     position: relative;
-    size: 0pt;
-    right: 100px;
-    bottom: 0px;
+    right: 50px;
     height: 60vmin;
+    padding-left: 10px;
+    margin-bottom: -50px;
+    margin-left: 20px;
     
   }
