--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,5 +1,5 @@
 .aboutpage{
-    background-image: url(C:\Users\hanse\Documents\Pokedex-Capstone2\mmnpokedex-capstone2\src\components\assets\648602.jpg);
+    background-image: url(./648602.jpg);
     min-height: 91.5vh;
 }
 
