--- a/src/components/PokeList/PokeList.css
+++ b/src/components/PokeList/PokeList.css
@@ -8,3 +8,15 @@
   align-content: center;
   padding-left: 10px;
 }
+
+.picturename {
+  background-image: url("../assets/bg.jpg");
+  min-height: 91.5vh;
+}
+
+.p-3 {
+  margin: auto;
+  width: 40%;
+  border: none;
+  padding: 60px;
+}
