took out images of team

--- a/src/components/Newsletter/Newsletter.css
+++ b/src/components/Newsletter/Newsletter.css
@@ -1,5 +1,5 @@
 .newsletterpic {
-  background-image: url("../assets/648602.jpg");
+  background-image: url("../About/648602.jpg");
   height: 800px;
   width: 100%;
   background-repeat: no-repeat;
